--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -5,54 +5,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Codeodrive – Roku Test Application</title>
   <style>
+    :root {
+      --primary: #FFA68A;
+      --primary-dark: #D55A35;
+      --secondary: #FFFFFF;
+      --bg: #4E4A48;
+      --bg-light: #C2B8B3;
+      --bg-dark: #1F1D1C;
+      --text-primary: #FFFFFF;
+      --text-secondary: #D6D3D1;
+      --text-muted: #706E6D;
+    }
+
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      background-color: #0f1115;
-      color: #eaeaf0;
+      background-color: var(--bg-dark);
+      color: var(--text-primary);
       margin: 0;
       padding: 0;
       line-height: 1.6;
     }
+
     .container {
       max-width: 900px;
       margin: 0 auto;
-      padding: 40px 20px;
+      padding: 48px 20px;
     }
+
     h1, h2 {
-      color: #8ab4ff;
+      color: var(--primary);
     }
+
     h1 {
-      margin-bottom: 10px;
+      margin-bottom: 8px;
+      font-size: 2.2rem;
     }
+
     .subtitle {
-      color: #b0b3c2;
-      margin-bottom: 30px;
+      color: var(--text-secondary);
+      margin-bottom: 36px;
+      font-size: 1.05rem;
     }
+
     section {
-      margin-bottom: 40px;
+      margin-bottom: 36px;
     }
+
     .box {
-      background-color: #181b22;
-      border-radius: 8px;
-      padding: 20px;
+      background-color: var(--bg);
+      border-radius: 12px;
+      padding: 24px 26px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.25);
     }
+
+    .box h2 {
+      margin-top: 0;
+      color: var(--primary);
+    }
+
+    p {
+      color: var(--text-secondary);
+    }
+
+    ul {
+      padding-left: 20px;
+      color: var(--text-secondary);
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
     a {
-      color: #8ab4ff;
+      color: var(--primary);
       text-decoration: none;
+      font-weight: 500;
     }
+
     a:hover {
       text-decoration: underline;
     }
+
     footer {
-      margin-top: 60px;
-      padding-top: 20px;
-      border-top: 1px solid #2a2e39;
-      color: #9aa0b4;
-      font-size: 0.9em;
-    }
-    ul {
-      padding-left: 20px;
+      margin-top: 64px;
+      padding-top: 24px;
+      border-top: 1px solid rgba(255, 255, 255, 0.1);
+      color: var(--text-muted);
+      font-size: 0.9rem;
+      text-align: center;
     }
   </style>
 </head>
