--- a/privacy_policy/de.html
+++ b/privacy_policy/de.html
@@ -59,6 +59,16 @@
       <p>Falls diese Anwendung in Zukunft erweitert wird, um Daten zu sammeln oder Benutzerkonten zu verwenden, wird diese Datenschutzrichtlinie entsprechend aktualisiert.</p>
     </section>
 
+    <section class="box">
+      <h2>Kontakt</h2>
+      <p>
+        Bei Fragen oder Anmerkungen zu dieser Anwendung wenden Sie sich bitte an:
+      </p>
+      <p>
+        📧 <a href="mailto:b.wawrzkowicz.codeodrive@gmail.com">b.wawrzkowicz.codeodrive@gmail.com</a>
+      </p>
+    </section>
+
     <footer>
       <p>© 2026 Codeodrive. Diese Roku-Anwendung ist weder mit Roku, Inc. verbunden noch von Roku, Inc. genehmigt.</p>
     </footer>
