--- a/privacy_policy/pl.html
+++ b/privacy_policy/pl.html
@@ -59,6 +59,16 @@
       <p>Jeśli aplikacja zostanie w przyszłości rozszerzona o funkcje zbierania danych lub kont użytkowników, polityka prywatności zostanie odpowiednio zaktualizowana.</p>
     </section>
 
+    <section class="box">
+      <h2>Kontakt</h2>
+      <p>
+        W razie pytań lub uwag dotyczących tej aplikacji prosimy o kontakt:
+      </p>
+      <p>
+        📧 <a href="mailto:b.wawrzkowicz.codeodrive@gmail.com">b.wawrzkowicz.codeodrive@gmail.com</a>
+      </p>
+    </section>
+
     <footer>
       <p>© 2026 Codeodrive. Ta aplikacja Roku nie jest powiązana z Roku, Inc. ani nie jest przez nią zatwierdzona.</p>
     </footer>
